src/style/components/list.scss
.list {
  padding: 0 $gutter;
  line-height: (24/16);
  font-family: "Jetbrains Mono";

  li{
    &::after {
      display: block;
      column-span: all;
      height: rem( 40 );
    }
  }

  @media (max-width: $max-medium) {
    li:nth-child(10n){
      &::after {
        content: '';
      }
    }
  }

  @media (min-width: $medium) {
    margin: $gutter 0;
    width: 100%;

    @media (max-width: $max-large){
      li:nth-child(20n){
        &::after {
          content: '';
        }
      }
    }
  }

  @media (min-width: $large) {
    columns: 2;
    column-gap: $gutter;
  }
  @media (min-width: $xlarge) {
    columns: 4;
    column-gap: $gutter;

    li:nth-child(40n){
      &::after {
        content: '';
      }
    }
  }
}

